# dotfiles

./: .gitconfig  .gitignore  .zprofile  .zshrc  LICENSE  README.md  bootstrap.sh  deploy.sh  install.sh  starship.toml
.config/: .zshrc
.config/quickshell/helpers_rs/: Cargo.toml  Makefile  README.md
.config/quickshell/helpers_rs/bins/apply_preset/: Cargo.toml
.config/quickshell/helpers_rs/bins/apply_preset/src/: main.rs
.config/quickshell/helpers_rs/bins/battery_daemon/: Cargo.toml
.config/quickshell/helpers_rs/bins/battery_daemon/src/: main.rs
.config/quickshell/helpers_rs/bins/caffeine/: Cargo.toml
.config/quickshell/helpers_rs/bins/caffeine/src/: main.rs
.config/quickshell/helpers_rs/bins/check_daemons/: Cargo.toml
.config/quickshell/helpers_rs/bins/check_daemons/src/: main.rs
.config/quickshell/helpers_rs/bins/display_toggle/: Cargo.toml
.config/quickshell/helpers_rs/bins/display_toggle/src/: main.rs
.config/quickshell/helpers_rs/bins/get_apps_list/: Cargo.toml
.config/quickshell/helpers_rs/bins/get_apps_list/src/: main.rs
.config/quickshell/helpers_rs/bins/get_audio_status/: Cargo.toml
.config/quickshell/helpers_rs/bins/get_battery_status/: Cargo.toml
.config/quickshell/helpers_rs/bins/get_bluetooth_status/: Cargo.toml
.config/quickshell/helpers_rs/bins/get_network_status/: Cargo.toml
.config/quickshell/helpers_rs/bins/get_power_profile/: Cargo.toml
.config/quickshell/helpers_rs/bins/get_sys_diagnostics/: Cargo.toml
.config/quickshell/helpers_rs/bins/list_presets/: Cargo.toml
.config/quickshell/helpers_rs/bins/log_battery/: Cargo.toml
.config/quickshell/helpers_rs/bins/mtp_notify/: Cargo.toml
.config/quickshell/helpers_rs/bins/osdctl/: Cargo.toml
.config/quickshell/helpers_rs/bins/parse_binds/: Cargo.toml
.config/quickshell/helpers_rs/bins/ports_menu/: Cargo.toml
.config/quickshell/helpers_rs/bins/screenshot/: Cargo.toml
.config/quickshell/helpers_rs/libs/core/: Cargo.toml
.config/quickshell/helpers_rs/src/: command.rs  lib.rs  settings.rs
.github/: README.md
primo/: Cargo.toml  Makefile  README.md
primo/bins/apply_preset/: Cargo.toml
primo/bins/apply_preset/src/: main.rs
primo/bins/battery_daemon/: Cargo.toml
primo/bins/battery_daemon/src/: main.rs
primo/bins/caffeine/: Cargo.toml
primo/bins/check_daemons/: Cargo.toml
primo/bins/display_toggle/: Cargo.toml
primo/bins/get_apps_list/: Cargo.toml
primo/bins/get_apps_list/src/: main.rs
primo/bins/get_audio_status/: Cargo.toml
primo/bins/get_audio_status/src/: main.rs
primo/bins/get_battery_status/: Cargo.toml
primo/bins/get_bluetooth_status/: Cargo.toml
primo/bins/get_bluetooth_status/src/: main.rs
primo/bins/get_network_status/: Cargo.toml
primo/bins/get_power_profile/: Cargo.toml
primo/bins/get_sys_diagnostics/: Cargo.toml
primo/bins/get_sys_diagnostics/src/: main.rs
primo/bins/list_presets/: Cargo.toml
primo/bins/list_presets/src/: main.rs
primo/bins/log_battery/: Cargo.toml
primo/bins/mtp_notify/: Cargo.toml
primo/bins/osdctl/: Cargo.toml
primo/bins/ports_menu/: Cargo.toml
primo/bins/screenshot/: Cargo.toml
primo/libs/core/: Cargo.toml
primo/libs/core/src/: paths.rs  state_file.rs
primo/src/: display.rs  lib.rs
primo/src/icon/: cache.rs  desktop.rs  mod.rs  theme.rs
(+374 files in other folders)
