[package]
name = "helpers_rs"
description = "Rust helpers for Quickshell (Hyprland bar/OSD/etc.)"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
zbus = "5.16.0"
futures-util = "0.3.32"
