[workspace]
resolver = "2"
members = [
  "libs/core",
  "bins/battery_daemon",
  "bins/check_daemons",
  "bins/get_apps_list",
  "bins/get_audio_status",
  "bins/get_battery_status",
  "bins/get_bluetooth_status",
  "bins/get_network_status",
  "bins/get_power_profile",
  "bins/get_sys_diagnostics",
  "bins/log_battery",
  "bins/osdctl",
  "bins/parse_binds",
  "bins/ports_menu",
  "bins/screenshot",
  "bins/mtp_notify",
]
