[package]
name = "get_apps_list"
version = "0.1.0"
edition = "2024"

[dependencies]
primo = { path = "../../libs/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
